scripts/nullaway/annotator/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8.txt
../annotator/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/core/Player.java:128: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return opponent;
		^
    (see http://t.uber.com/nullaway )
../annotator/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/gui/GUIAdapter.java:58: error: [NullAway] initializer method does not guarantee @NonNull field game (line 37) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public GUIAdapter() throws ClassNotFoundException, IOException 
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/core/King.java:29: error: [NullAway] dereferenced expression from is @Nullable
		Column column = from.getColumn();
		                    ^
    (see http://t.uber.com/nullaway )
../annotator/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/core/Position.java:54: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return POSITIONS.get(Pair.of(column, row));
		^
    (see http://t.uber.com/nullaway )
../annotator/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/core/Column.java:161: error: [NullAway] dereferenced expression currColumn is @Nullable
			if (currColumn.equals(toColumn)) {
			              ^
    (see http://t.uber.com/nullaway )
../annotator/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/core/Column.java:214: error: [NullAway] dereferenced expression currColumn is @Nullable
			if (currColumn.equals(toColumn)) {
			              ^
    (see http://t.uber.com/nullaway )
../annotator/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/core/Row.java:161: error: [NullAway] dereferenced expression currRow is @Nullable
			if (currRow.equals(toRow)) {
			           ^
    (see http://t.uber.com/nullaway )
../annotator/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/core/Row.java:214: error: [NullAway] dereferenced expression currRow is @Nullable
			if (currRow.equals(toRow)) {
			           ^
    (see http://t.uber.com/nullaway )
8 errors
